[#9876] Unified naming convention